--- a/views/users/Login.ejs
+++ b/views/users/Login.ejs
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
                 <div class="card shadow">
-                    <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
-                        alt="" class="card-img-top" crossorigin />
+                    <img src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1699785826/YelpCamp%20Related%20Media/kltuq43lucxyampswava.avif"
+                        class="card-img-top" crossorigin />
                     <div class="card-body">
                         <h3 class="card-title">Login to Continue</h3>
                         <p class="mb-3 mt-4 mandatory">* Mandatory Fields</p>
@@ -35,7 +35,10 @@
                             </div>
                             <div class="d-grid mt-3 gap-2">
                                 <button type="submit" class="btn btn-success">Login</button>
-                                <a href="/register" class="btn btn-primary">Create new account</a>
+                                <div class="d-grid mt-2">
+                                    <label class="form-label">New User?</label>
+                                    <a href="/register" class="btn btn-primary">Register a new account</a>
+                                </div>
                             </div>
                         </form>
                     </div>
