--- a/views/users/Register.ejs
+++ b/views/users/Register.ejs
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
                 <div class="card shadow">
-                    <img src="https://images.unsplash.com/photo-1533873984035-25970ab07461?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1267&q=80"
-                        alt="" class="card-img-top" crossorigin />
+                    <img src="https://res.cloudinary.com/dtwgxcqkr/image/upload/v1699785826/YelpCamp%20Related%20Media/kfrat5epbhqsmobe3kie.avif"
+                        class="card-img-top" crossorigin />
                     <div class="card-body">
                         <h3 class="card-title">Create a new account</h3>
                         <p class="mb-3 mt-4 mandatory">* Mandatory Fields</p>
@@ -45,8 +45,12 @@
                                     Please provide a valid password.
                                 </div>
                             </div>
-                            <div class="d-grid mt-3">
+                            <div class="d-grid mt-3 gap-2">
                                 <button type="submit" class="btn btn-success">Register</button>
+                                <div class="d-grid mt-2">
+                                    <label class="form-label">Have an account already?</label>
+                                    <a href="/login" class="btn btn-primary">Sign in</a>
+                                </div>
                             </div>
                         </form>
                     </div>
