--- a/views/campgrounds/Categories.ejs
+++ b/views/campgrounds/Categories.ejs
@@ -11,17 +11,23 @@
         </h2>
         <hr>
         <% if(campgrounds.content.length) { %>
-            <div class="d-flex flex-row justify-content-start gap-4 wrapper p-2">
+            <div class="d-flex flex-row justify-content-start gap-4 wrapper p-4">
                 <% for (let campground of campgrounds.content) { %>
-                    <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "o_30/" + (campground.images[0].url).substr(49) : "" %>
+                    <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "/o_35/" + (campground.images[0].url).substr(49) : "" %>
                         <div class="card view"
                             style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
                             <div class="col d-flex flex-column justify-content-between">
                                 <div class="row">
                                     <div class="card-body px-4">
-                                        <h1 class="card-title">
-                                            <%=campground.title%>
-                                        </h1>
+                                        <div class="card-head d-flex align-items-center">
+                                            <h1 class="card-title">
+                                                <%=campground.title%>
+                                            </h1>
+                                            <h6 class="ms-auto"><i class="fa-solid fa-flip fa-star"
+                                                    style="color: #ffd700;"></i>
+                                                <%= campground.avgRating %> (<%= campground.reviews.length %>)
+                                            </h6>
+                                        </div>
                                         <div class="card-text">
                                             <small class="text-muted">
                                                 <%=campground.location%>
