--- a/views/layouts/BoilerPlate.ejs
+++ b/views/layouts/BoilerPlate.ejs
@@ -10,11 +10,13 @@
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js' crossorigin></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' crossorigin />
-    <link rel="stylesheet" href="/CSS/Application Styles.css">
-    <link rel="stylesheet" href="/CSS/Index Page.css">
-    <link rel="stylesheet" href="/CSS/Categories Page.css">
+    <% const { FONTAWESOME }=process.env; %>
+        <script src="https://kit.fontawesome.com/<%=FONTAWESOME%>.js" crossorigin="anonymous"></script>
+        <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js' crossorigin></script>
+        <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' crossorigin />
+        <link rel="stylesheet" href="/CSS/Application Styles.css">
+        <link rel="stylesheet" href="/CSS/Index Page.css">
+        <link rel="stylesheet" href="/CSS/Categories Page.css">
 </head>
 
 <body class="d-flex flex-column vh-100 bg-light justify-content-between">
@@ -24,9 +26,9 @@
                 <%- body %>
         </main>
         <%- include('../partials/Footer') %>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                crossorigin="anonymous"></script>
             <script src="/JS/BootStrap Form Validations.js"></script>
 </body>
 
