--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -1,102 +1,81 @@
 <% layout('/layouts/BoilerPlate') %>
   <% if(!error) { %>
     <div id="clusterMap" class="mb-3"></div>
-    <nav class="navbar navbar-expand navbar-light bg-light mb-3 text-center">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#categories">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse border-bottom" id="categories">
-          <ul class="navbar-nav me-auto">
-            <% let navItems=["Premier", "Latest" ]; %>
-              <% for(let navItem of navItems) { %>
-                <% if(navItem.toLowerCase()===current.find) { %>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page">
-                      <h4>
-                        <%=navItem%>
-                      </h4>
-                    </a>
-                  </li>
-                  <% } else { %>
-                    <li class="nav-item">
-                      <a class="nav-link"
-                        href="/campgrounds?select=<%=current.select%>&find=<%=navItem.toLowerCase()%>&page=1&limit=<%=current.limit%>">
-                        <h4>
-                          <%=navItem%>
-                        </h4>
-                      </a>
-                    </li>
-                    <% } %>
-                      <% } %>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="d-flex flex-row flex-wrap justify-content-evenly gap-4">
-      <% for (let campground of campgrounds) { %>
-        <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "/o_35/" + (campground.images[0].url).substr(49) : "" %>
-          <div class="card mb-5 view"
-            style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
-            <div class="col d-flex flex-column justify-content-between">
-              <div class="row">
-                <div class="card-body px-4">
-                  <div class="card-head d-flex align-items-center">
-                    <h1 class="card-title">
-                      <%=campground.title%>
-                    </h1>
-                    <h4 class="ms-auto"><i class="fa-solid fa-flip fa-star" style="color: #ffd700;"></i>
-                      <%= campground.avgRating %> (<%= campground.reviews.length %>)
-                    </h4>
-                  </div>
-                  <div class="card-text">
-                    <small class="text-muted">
-                      <%=campground.location%>
-                    </small>
-                    <p class="mt-3">
-                      <b>Price:</b> Rs. <%=campground.price%>/-
-                    </p>
-                    <p class="mt-3">
-                      <b>Suggested By:</b>
-                      <%=campground.author.username%>
-                    </p>
-                    <p class="mt-3 text-justify">
-                      <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
-                    </p>
+    <label class="form-label">Sort page <%=current.page%> results by: </label>
+    <% const options={ "Latest" : { sortBy: "latest" }, "Earliest" : { sortBy: "earliest" }, "Top Rated" : { sortBy: "top-rated" }, "Premium" : { sortBy: "premium" }, "Economic" : { sortBy: "economic" }, "Title [A-Z]" : { sortBy: "title-asc" }, "Title [Z-A]" : { sortBy: "title-desc" }, "Location [A-Z]" : { sortBy: "location-asc" }, "Location [Z-A]" : { sortBy: "location-desc" } }; %>
+      <select class="form-select-sm my-3" id="categories" name="categories">
+        <% for(let option in options) { %>
+          <option value="<%=option%>" <%=(options[option].sortBy.toLowerCase()==="latest" ) ? "selected" : "" %>>
+            <%=option%></a>
+          </option>
+          <% } %>
+      </select>
+      <% for(let campgroundSortBy in campgrounds) { %>
+        <div class="d-flex flex-row flex-wrap justify-content-evenly gap-4 campground<%=(campgroundSortBy === "latest") ? "" : " d-none" %>" id="<%=campgroundSortBy%>">
+            <% for (let campground of campgrounds[campgroundSortBy]) { %>
+              <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "/o_35/" + (campground.images[0].url).substr(49) : "" %>
+                <div class="card mb-5 view"
+                  style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
+                  <div class="col d-flex flex-column justify-content-between">
+                    <div class="row">
+                      <div class="card-body px-4">
+                        <div class="card-head d-flex align-items-center">
+                          <h1 class="card-title">
+                            <%=campground.title%>
+                          </h1>
+                          <h4 class="ms-auto"><i class="fa-solid fa-flip fa-star" style="color: #ffd700;"></i>
+                            <%= campground.avgRating %> (<%= campground.reviews.length %>)
+                          </h4>
+                        </div>
+                        <div class="card-text">
+                          <small class="text-muted">
+                            <%=campground.location%>
+                          </small>
+                          <p class="mt-3">
+                            <b>Price:</b> Rs. <%=campground.price%>/-
+                          </p>
+                          <p class="mt-3">
+                            <b>Suggested By:</b>
+                            <%=campground.author.username%>
+                          </p>
+                          <p class="mt-3 text-justify">
+                            <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row text-center pb-3 px-5">
+                      <a href="/campgrounds/<%=campground._id%>" class="card-link btn btn-outline-dark btn-sm"
+                        title="View Campground">View</a>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="row text-center pb-3 px-5">
-                <a href="/campgrounds/<%=campground._id%>" class="card-link btn btn-outline-dark btn-sm"
-                  title="View Campground">View</a>
-              </div>
-            </div>
-          </div>
-          <% } %>
-    </div>
-    <div class="page-header"></div>
-    <ul id="pagination">
-      <% let last=(total%current.limit===0) ? (total/current.limit) : (total/current.limit) + 1; %>
-        <% for (let page=1; page<=last; page++) {%>
-          <li>
-            <% if(page===current.page){ %>
-              <a class="active">
-                <%=page%>
-              </a>
-              <% } else { %>
-                <a
-                  href="/campgrounds?select=<%=current.select%>&find=<%=current.find.toLowerCase()%>&page=<%=page%>&limit=<%=current.limit%>">
-                  <%=page%>
-                </a>
                 <% } %>
-          </li>
-          <% } %>
-    </ul>
-    <script>
-      let mapboxToken = `<%-process.env.MAPBOX_TOKEN%>`;
-      let campgrounds = `<%-JSON.stringify(campgrounds)%>`
-    </script>
-    <script src="/JS/Cluster Map.js"></script>
-    <% } else { %>
-      <%- include('../partials/NotFound') %>
+        </div>
         <% } %>
+          <div class="page-header"></div>
+          <ul id="pagination">
+            <% let last=(total%current.limit===0) ? (total/current.limit) : (total/current.limit) + 1; %>
+              <% for (let page=1; page<=last; page++) {%>
+                <li>
+                  <% if(page===current.page){ %>
+                    <a class="active">
+                      <%=page%>
+                    </a>
+                    <% } else { %>
+                      <a href="/campgrounds?select=<%=current.select%>&page=<%=page%>&limit=<%=current.limit%>">
+                        <%=page%>
+                      </a>
+                      <% } %>
+                </li>
+                <% } %>
+          </ul>
+          <script>
+            let mapboxToken = `<%-process.env.MAPBOX_TOKEN%>`;
+            let campgrounds = `<%-JSON.stringify(campgrounds.latest)%>`
+          </script>
+          <script src="/JS/Cluster Map.js"></script>
+          <script src="/JS/Sort Campgrounds.js"></script>
+          <% } else { %>
+            <%- include('../partials/NotFound') %>
+              <% } %>
