--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -1,81 +1,91 @@
 <% layout('/layouts/BoilerPlate') %>
   <% if(!error) { %>
     <div id="clusterMap" class="mb-3"></div>
-    <label class="form-label">Sort page <%=current.page%> results by: </label>
     <% const options={ "Latest" : { sortBy: "latest" }, "Earliest" : { sortBy: "earliest" }, "Top Rated" : { sortBy: "top-rated" }, "Premium" : { sortBy: "premium" }, "Economic" : { sortBy: "economic" }, "Title [A-Z]" : { sortBy: "title-asc" }, "Title [Z-A]" : { sortBy: "title-desc" }, "Location [A-Z]" : { sortBy: "location-asc" }, "Location [Z-A]" : { sortBy: "location-desc" } }; %>
-      <select class="form-select-sm my-3" id="categories" name="categories">
-        <% for(let option in options) { %>
-          <option value="<%=option%>" <%=(options[option].sortBy.toLowerCase()==="latest" ) ? "selected" : "" %>>
-            <%=option%></a>
-          </option>
-          <% } %>
-      </select>
-      <% for(let campgroundSortBy in campgrounds) { %>
-        <div class="d-flex flex-row flex-wrap justify-content-evenly gap-4 campground<%=(campgroundSortBy === "latest") ? "" : " d-none" %>" id="<%=campgroundSortBy%>">
-            <% for (let campground of campgrounds[campgroundSortBy]) { %>
-              <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "/o_35/" + (campground.images[0].url).substr(49) : "" %>
-                <div class="card mb-5 view"
-                  style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
-                  <div class="col d-flex flex-column justify-content-between">
-                    <div class="row">
-                      <div class="card-body px-4">
-                        <div class="card-head d-flex align-items-center">
-                          <h1 class="card-title">
-                            <%=campground.title%>
-                          </h1>
-                          <h4 class="ms-auto"><i class="fa-solid fa-flip fa-star" style="color: #ffd700;"></i>
-                            <%= campground.avgRating %> (<%= campground.reviews.length %>)
-                          </h4>
-                        </div>
-                        <div class="card-text">
-                          <small class="text-muted">
-                            <%=campground.location%>
-                          </small>
-                          <p class="mt-3">
-                            <b>Price:</b> Rs. <%=campground.price%>/-
-                          </p>
-                          <p class="mt-3">
-                            <b>Suggested By:</b>
-                            <%=campground.author.username%>
-                          </p>
-                          <p class="mt-3 text-justify">
-                            <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="row text-center pb-3 px-5">
-                      <a href="/campgrounds/<%=campground._id%>" class="card-link btn btn-outline-dark btn-sm"
-                        title="View Campground">View</a>
-                    </div>
-                  </div>
-                </div>
-                <% } %>
-        </div>
+      <% if(!current.find) { %>
+        <label class="form-label">Sort page <%=current.page%> results by: </label>
+        <select class="form-select-sm my-3" id="categories" name="categories">
+          <% for(let option in options) { %>
+            <option value="<%=option%>" <%=(options[option].sortBy.toLowerCase()==="latest" ) ? "selected" : "" %>>
+              <%=option%></a>
+            </option>
+            <% } %>
+        </select>
         <% } %>
-          <div class="page-header"></div>
-          <ul id="pagination">
-            <% let last=(total%current.limit===0) ? (total/current.limit) : (total/current.limit) + 1; %>
-              <% for (let page=1; page<=last; page++) {%>
-                <li>
-                  <% if(page===current.page){ %>
-                    <a class="active">
-                      <%=page%>
-                    </a>
-                    <% } else { %>
-                      <a href="/campgrounds?select=<%=current.select%>&page=<%=page%>&limit=<%=current.limit%>">
-                        <%=page%>
-                      </a>
-                      <% } %>
-                </li>
-                <% } %>
-          </ul>
-          <script>
-            let mapboxToken = `<%-process.env.MAPBOX_TOKEN%>`;
-            let campgrounds = `<%-JSON.stringify(campgrounds.latest)%>`
-          </script>
-          <script src="/JS/Cluster Map.js"></script>
-          <script src="/JS/Sort Campgrounds.js"></script>
-          <% } else { %>
-            <%- include('../partials/NotFound') %>
-              <% } %>
+          <% for(let campgroundSortBy in campgrounds) { %>
+            <% if(current.find) { %>
+              <% let sortLabel; %>
+                <% for(const option in options){ if(options[option].sortBy===current.find) { sortLabel=option } } %>
+                  <h1 class="my-4 pb-3 border-bottom"><%=sortLabel%> Campgrounds</h1>
+                  <% } %>
+                    <div class="d-flex flex-row flex-wrap justify-content-evenly gap-4 campground<%=(campgroundSortBy === "latest") ? "" : " d-none" %>" id="<%=campgroundSortBy%>">
+                      <% for (let campground of campgrounds[campgroundSortBy]) { %>
+                        <% let campgroundBackgroundImageURL=(campground.images.length> 0) ? (campground.images[0].url).substr(0, 49) + "/o_35/" + (campground.images[0].url).substr(49) : "" %>
+                          <div class="card mb-5 view" style="background-image: url(<%=campgroundBackgroundImageURL%>); background-size: cover;">
+                            <div class="col d-flex flex-column justify-content-between">
+                              <div class="row">
+                                <div class="card-body d-flex flex-column px-4">
+                                    <h4 class="ms-auto"><i class="fa-solid fa-flip fa-star"
+                                        style="color: #ffd700;"></i>
+                                      <%= campground.avgRating %> (<%= campground.reviews.length %>)
+                                    </h4>
+                                    <h1 class="card-title">
+                                      <%=campground.title%>
+                                    </h1>
+                                  <div class="card-text">
+                                    <small class="text-muted">
+                                      <%=campground.location%>
+                                    </small>
+                                    <p class="mt-3">
+                                      <b>Price:</b> Rs. <%=campground.price%>/-
+                                    </p>
+                                    <p class="mt-3">
+                                      <b>Suggested By:</b>
+                                      <%=campground.author.username%>
+                                    </p>
+                                    <p class="mt-3 text-justify">
+                                      <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="row text-center pb-3 px-5">
+                                <a href="/campgrounds/<%=campground._id%>" class="card-link btn btn-outline-dark btn-sm" title="View Campground">View</a>
+                              </div>
+                            </div>
+                          </div>
+                          <% } %>
+                    </div>
+                    <% } %>
+                      <div class="page-header"></div>
+                      <ul id="pagination">
+                        <% let last=(total%current.limit===0) ? (total/current.limit) : (total/current.limit) + 1; %>
+                          <% for (let page=1; page<=last; page++) { %>
+                            <li>
+                              <% if(page===current.page){ %>
+                                <a class="active">
+                                  <%=page%>
+                                </a>
+                                <% } else if(current.find) { %>
+                                  <a href="/campgrounds?find=<%=current.find%>&page=<%=page%>&limit=<%=current.limit%>">
+                                    <%=page%>
+                                  </a>
+                                  <% } else { %>
+                                    <a href="/campgrounds?select=<%=current.select%>&page=<%=page%>&limit=<%=current.limit%>">
+                                      <%=page%>
+                                    </a>
+                                    <% } %>
+                            </li>
+                            <% } %>
+                      </ul>
+                      <script>
+                        let mapboxToken = `<%-process.env.MAPBOX_TOKEN%>`;
+                        let campgrounds = `<%-JSON.stringify(campgrounds.latest)%>`
+                      </script>
+                      <script src="/JS/Cluster Map.js"></script>
+                      <% if(!current.find) { %>
+                        <script src="/JS/Sort Campgrounds.js"></script>
+                        <% } %>
+                          <% } else { %>
+                            <%- include('../partials/NotFound') %>
+                              <% } %>
