--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -41,7 +41,7 @@
                                     </p>
                                     <p class="mt-3">
                                       <b>Suggested By:</b>
-                                      <%=campground.author.username%>
+                                      <%=campground.author.name%> <a href="/users/<%=campground.author.username%>" title="View <%=campground.author.name%>" class="text-decoration-none"><%=`(@${campground.author.username})`%></a>
                                     </p>
                                     <p class="mt-3 text-justify">
                                       <%= (campground.description) ? campground.description.slice(0, 100) + "..." : "" %>
