--- a/views/partials/Navbar.ejs
+++ b/views/partials/Navbar.ejs
@@ -37,8 +37,9 @@
                     <a class="nav-link" href="/login">Login</a>
                     <a class="nav-link" href="/register">Register</a>
                     <% } else { %>
-                        <a class="navbar-brand">Welcome, <%=currentUser.username%></a>
-                        <form action="/logout" method="post" class="nav-link">
+                        <a class="navbar-brand">Welcome, <%=currentUser.name%></a>
+                        <a href="/users/<%=currentUser.username%>" class="nav-link d-grid"><button type="submit" class="btn btn-info btn-sm">View Profile</button></a>
+                        <form action="/logout" method="post" class="nav-link d-grid">
                             <button type="submit" class="btn btn-danger btn-sm">Logout</button>
                         </form>
                         <% } %>
